--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <html>
   <head>
 
-    <title>Happy - all editions</title>
+    <title>Spread the happieness! #happyday</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="TODO">
-    <meta property="og:title" content="TODO"/>
-    <meta property="og:type" content="profile"/>
-    <meta property="og:url" content="TODO" />
-    <meta property="og:image" content="TODO"/>
-    <meta property="og:site_name" content="TODO" />
-    <meta property="profile:first_name" content="TODO">
-    <meta property="profile:last_name" content="TODO">
-    <meta property="fb:app_id" content="TODO"/>
-    <meta property="og:description" content="TODO"/>
 
+    <meta name="description" content="This is pure happiness! Just listen to these songs and be happy!"/>
+    <meta property="og:title" content="Everyday a Happyday"/>
+    <meta property="og:type" content="cause"/>
+    <meta property="og:url" content="http://koos.github.io/happyday"/>
+    <meta property="og:image" content="http://koos.github.io/happyday/happy.png"/>
+    <meta property="og:site_name" content="Everyday a Happyday"/>
+    <!-- <meta property="fb:admins" content="500108777"/> -->
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:description" content="This is pure happiness! Just listen to these songs and be happy!"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
     <style>
       * {
@@ -63,7 +62,6 @@
     <div class='video'></div>  
     <script type="text/javascript">
     jQuery(document).ready(function ($) {
-
       var url = "http://gdata.youtube.com/feeds/api/videos/?v=2&q=happyday+happy+edition&alt=jsonc&max-results=50&callback=?"
       $.getJSON(url, function (json) {
         var count = 0;
@@ -109,7 +107,6 @@
       //run once
       var el=$('.overlay');
       var originalelpos=el.offset().top+253; // take it where it originally is on the page
-      console.log(originalelpos);
       //run on scroll
        $(window).scroll(function(){
           var el = $('.overlay'); // important! (local)
@@ -121,5 +118,23 @@
 
     });
     </script> 
+
+    Spread the happieness on Twitter and Facebook:<br/><br/>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-538b071779a6526e"></script>
+    <div class="addthis_toolbox addthis_default_style addthis_counter_style">
+      <a class="addthis_button_facebook_share" fb:like:layout="box_count"></a>
+      <a class="addthis_button_tweet" tw:count="vertical"></a>
+      <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+      <a class="addthis_button_linkedin_counter" li:counter="top"></a>
+      <a class="addthis_counter"></a>
+    </div>
+    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+    Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>.</div>
+    </div>
+    <noscript><div id="noscript">(please enable javascript)<span>This is pure happiness!</span></div></noscript>
+    <script type="text/javascript">
+      var addthis_config = addthis_config||{};
+      addthis_config.pubid = "ra-538b071779a6526e";
+    </script>
   </body>
 </html>
