--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta property="og:locale" content="en_US"/>
     <meta property="og:description" content="This is pure happiness! Just listen to these songs and be happy!"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <style>
       * {
         padding: 0;
@@ -51,72 +53,85 @@
         padding: 30px;
         z-index: 1000;
       }
+
+      .full-overlay-left {
+        background-color: rgb(225, 228, 0);
+        width: 50%;
+        height: 100%;
+        float: right;
+      }
+      .full-overlay-right {
+        background-color: rgb(225, 228, 0);
+        width: 50%;
+        height: 100%;
+      }      
     </style>
 
   </head>
   <body>
     <div class='overlay'>
-      <iframe width="900" height="506" src="http://www.youtube.com/embed/GINbI5CMt3I?rel=0&autoplay=1" frameborder="0" allowfullscreen autostart id="GINbI5CMt3I"></iframe>
-      <a href="#" id="close-overlay">Close</a>
+      <iframe width="900" height="506" src="http://www.youtube.com/embed/GINbI5CMt3I?rel=0&autoplay=0" frameborder="0" allowfullscreen autostart id="GINbI5CMt3I"></iframe>
+      <a href="#" id="close-overlay" onClick="event.preventDefault(); return false;">Close</a>
     </div>
     <div class='video'></div>  
     <script type="text/javascript">
-    jQuery(document).ready(function ($) {
-      var url = "http://gdata.youtube.com/feeds/api/videos/?v=2&q=happyday+happy+edition&alt=jsonc&max-results=50&callback=?"
-      $.getJSON(url, function (json) {
-        var count = 0;
-        if (json.data.items) {
-          var items = json.data.items;
-          items.forEach(function (item) {
-            count++;
-          });
-        }
-        if (count === 0) {
-          console.log("No videos found");
-        } else {
-          // console.log(items);
-          var video = $('.video')
-          for(var i = 0; i < items.length; i++) {
-            $('.video').append($('<img>', { 
-              src : items[i].thumbnail.hqDefault,
-              width : 480, 
-              height : 360, 
-              alt : items[i].title, 
-              title : items[i].title,
-              id: items[i].id,
-              "class": 'video-item'
-            }));
-            $("#"+items[i].id).click(function() {
-              console.log($(this).attr('id'));
-              $('.overlay').empty();
-              $('.overlay').show();
-              $('.overlay').append('<iframe width="900" height="506" src="http://www.youtube.com/embed/'+$(this).attr('id')+'?rel=0&autoplay=1" frameborder="0" allowfullscreen autostart></iframe>');
-              $('.overlay').append('<a href="#" id="close-overlay">Close</a>');
-              $( "#close-overlay" ).click(function() {
-                $('.overlay').hide();
+      jQuery(document).ready(function ($) {
+        var url = "http://gdata.youtube.com/feeds/api/videos/?v=2&q=happyday+happy+edition&alt=jsonc&max-results=50&callback=?"
+        $.getJSON(url, function (json) {
+          var count = 0;
+          if (json.data.items) {
+            var items = json.data.items;
+            var item = items[Math.floor(Math.random()*items.length)];
+            $('.overlay').empty();
+            $('.overlay').append('<iframe width="900" height="506" src="http://www.youtube.com/embed/'+item.id+'?rel=0&autoplay=1" frameborder="0" allowfullscreen autostart></iframe>');
+            $('.overlay').append('<a href="#" id="close-overlay" onClick="event.preventDefault(); return false;">Close</a>');
+            $('.overlay').show();
+          }
+          if (items.length === 0) {
+            console.log("No videos found");
+          } else {
+            var video = $('.video')
+            for(var i = 0; i < items.length; i++) {
+              $('.video').append($('<img>', { 
+                src : items[i].thumbnail.hqDefault,
+                width : 480, 
+                height : 360, 
+                alt : items[i].title, 
+                title : items[i].title,
+                id: items[i].id,
+                "class": 'video-item'
+              }));
+
+              $("#"+items[i].id).click(function() {
+                $('.overlay').empty();
+                $('.overlay').append('<iframe width="900" height="506" src="http://www.youtube.com/embed/'+$(this).attr('id')+'?rel=0&autoplay=1" frameborder="0" allowfullscreen autostart></iframe>');
+                $('.overlay').append('<a href="#" id="close-overlay" onClick="event.preventDefault(); return false;">Close</a>');
+                $('.overlay').show();
               });
 
-            });
+              $( "#close-overlay" ).click(function() {
+                $('.overlay').hide();
+              });              
+
+            }
           }
-        }
-      });
-      $( "#close-overlay" ).click(function() {
-        $('.overlay').hide();
-      });
+        });
+        $( "#close-overlay" ).click(function() {
+          $('.overlay').hide();
+        });
+        //run once
+        var el=$('.overlay');
+        var originalelpos=el.offset().top+253; // take it where it originally is on the page
+        //run on scroll
+         $(window).scroll(function(){
+            var el = $('.overlay'); // important! (local)
+            var elpos = el.offset().top; // take current situation
+            var windowpos = $(window).scrollTop();
+            var finaldestination = windowpos+originalelpos;
+            el.stop().animate({'top':finaldestination},500);
+         });
 
-      //run once
-      var el=$('.overlay');
-      var originalelpos=el.offset().top+253; // take it where it originally is on the page
-      //run on scroll
-       $(window).scroll(function(){
-          var el = $('.overlay'); // important! (local)
-          var elpos = el.offset().top; // take current situation
-          var windowpos = $(window).scrollTop();
-          var finaldestination = windowpos+originalelpos;
-          el.stop().animate({'top':finaldestination},500);
-       });
-
-    });
+      });
     </script> 
 
     Spread the happieness on Twitter and Facebook:<br/><br/>
