--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 
-    <title>Spread the happieness! #happyday</title>
+    <title>Spread the happiness! #happyday</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,16 +30,36 @@
       }
  
       body {
-        /*overflow: hidden;*/
-        width: 150%;
+        overflow-y: hidden;
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+      }
+
+      a {
+        color: #aaa;
+        text-decoration: underline;
       }
  
-      .video {
-        min-width: 560px;
-        min-height: 315px;
+      .videos {
         float: left;
+        max-height: 100%;
         /*  pointer-events: none;*/
       }
+      
+      .column {
+        position: relative;
+        height: 100%;
+        float: left;
+      }
+
+      .column img {
+        height: 33.333333%;
+        width: auto;
+        display: block;
+      }
+
+
  
       .overlay {
         position: absolute;
@@ -65,6 +85,20 @@
         width: 50%;
         height: 100%;
       }      
+
+      footer {
+        width: 100%;
+        position: fixed;
+        height: 30px;
+        bottom: 0;
+        padding: 10px 0;
+        color: black;
+        text-align: left;
+        background-color: white;
+        border-color: #080808;
+        font-family: "Helvetica";
+        text-align: center
+      }
     </style>
 
   </head>
@@ -73,7 +107,8 @@
       <iframe width="900" height="506" src="http://www.youtube.com/embed/GINbI5CMt3I?rel=0&autoplay=0" frameborder="0" allowfullscreen autostart id="GINbI5CMt3I"></iframe>
       <a href="#" id="close-overlay" onClick="event.preventDefault(); return false;">Close</a>
     </div>
-    <div class='video'></div>  
+    <div class='videos'>
+    </div>
     <script type="text/javascript">
       jQuery(document).ready(function ($) {
         var url = "http://gdata.youtube.com/feeds/api/videos/?v=2&q=happyday+happy+edition&alt=jsonc&max-results=50&callback=?"
@@ -87,20 +122,22 @@
             $('.overlay').append('<a href="#" id="close-overlay" onClick="event.preventDefault(); return false;">Close</a>');
             $('.overlay').show();
           }
+          console.log(items);
           if (items.length === 0) {
             console.log("No videos found");
           } else {
-            var video = $('.video')
             for(var i = 0; i < items.length; i++) {
-              $('.video').append($('<img>', { 
+              if( i % 3 == 0) {
+                $('.videos').append($('<div>', { "class": "column" }));
+              }
+              $('.videos .column').last().append($('<img>', { 
                 src : items[i].thumbnail.hqDefault,
-                width : 480, 
-                height : 360, 
                 alt : items[i].title, 
                 title : items[i].title,
                 id: items[i].id,
                 "class": 'video-item'
-              }));
+              }));              
+
 
               $("#"+items[i].id).click(function() {
                 $('.overlay').empty();
@@ -114,6 +151,8 @@
               });              
 
             }
+            $('.column').width($('.column img').first().width());
+            $('.videos').width($('.column img').first().width()*(Math.ceil(items.length/3)));
           }
         });
         $( "#close-overlay" ).click(function() {
@@ -121,35 +160,36 @@
         });
         //run once
         var el=$('.overlay');
-        var originalelpos=el.offset().top+253; // take it where it originally is on the page
+        var originalelpos=el.offset().left + $('.overlay').width() / 2; // take it where it originally is on the page
         //run on scroll
          $(window).scroll(function(){
             var el = $('.overlay'); // important! (local)
-            var elpos = el.offset().top; // take current situation
-            var windowpos = $(window).scrollTop();
+            var elpos = el.offset().left; // take current situation
+            var windowpos = $(window).scrollLeft();
             var finaldestination = windowpos+originalelpos;
-            el.stop().animate({'top':finaldestination},500);
+            el.stop().animate({'left':finaldestination},500);
          });
 
       });
     </script> 
 
-    Spread the happieness on Twitter and Facebook:<br/><br/>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-538b071779a6526e"></script>
-    <div class="addthis_toolbox addthis_default_style addthis_counter_style">
-      <a class="addthis_button_facebook_share" fb:like:layout="box_count"></a>
-      <a class="addthis_button_tweet" tw:count="vertical"></a>
-      <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
-      <a class="addthis_button_linkedin_counter" li:counter="top"></a>
-      <a class="addthis_counter"></a>
-    </div>
-    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-    Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>.</div>
-    </div>
-    <noscript><div id="noscript">(please enable javascript)<span>This is pure happiness!</span></div></noscript>
-    <script type="text/javascript">
-      var addthis_config = addthis_config||{};
-      addthis_config.pubid = "ra-538b071779a6526e";
-    </script>
+    <footer>
+      Spread the happiness on Twitter and Facebook:
+      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-538b071779a6526e"></script>
+      <div class="addthis_toolbox addthis_default_style addthis_counter_style">
+        <a class="addthis_button_facebook_share" fb:like:layout="box_count"></a>
+        <a class="addthis_button_tweet" tw:count="vertical"></a>
+        <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+        <a class="addthis_button_linkedin_counter" li:counter="top"></a>
+        <a class="addthis_counter"></a>
+      </div>
+      Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>.</div>
+      <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+      <noscript><div id="noscript">(please enable javascript)<span>This is pure happiness!</span></div></noscript>
+      <script type="text/javascript">
+        var addthis_config = addthis_config||{};
+        addthis_config.pubid = "ra-538b071779a6526e";
+      </script>
+    </footer>
   </body>
-</html>
+<!-- </-xhtml> -->
