--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
         display: block;
       }
 
+      .addthis_toolbox {
+        width: 301px;
+        margin: 0px auto;
+      }
 
- 
       .overlay {
         position: absolute;
         top: 50%;
         left: 50%;
         margin-left: -450;
-        margin-top: -253px;
+        margin-top: -350px;
         background-color: rgba(225, 228, 0, 0.5);
         box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
         border-radius: 5px;
@@ -74,27 +77,15 @@
         z-index: 1000;
       }
 
-      .full-overlay-left {
-        background-color: rgb(225, 228, 0);
-        width: 50%;
-        height: 100%;
-        float: right;
-      }
-      .full-overlay-right {
-        background-color: rgb(225, 228, 0);
-        width: 50%;
-        height: 100%;
-      }      
-
       footer {
         width: 100%;
         position: fixed;
-        height: 30px;
+        height: 100px;
         bottom: 0;
         padding: 10px 0;
         color: black;
         text-align: left;
-        background-color: white;
+        background-color: rgb(225, 228, 0);
         border-color: #080808;
         font-family: "Helvetica";
         text-align: center
@@ -174,7 +165,7 @@
     </script> 
 
     <footer>
-      Spread the happiness on Twitter and Facebook:
+      Spread the happiness on Twitter and Facebook!
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-538b071779a6526e"></script>
       <div class="addthis_toolbox addthis_default_style addthis_counter_style">
         <a class="addthis_button_facebook_share" fb:like:layout="box_count"></a>
@@ -183,7 +174,7 @@
         <a class="addthis_button_linkedin_counter" li:counter="top"></a>
         <a class="addthis_counter"></a>
       </div>
-      Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>.</div>
+      Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>. Scroll to the right →</div>
       <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
       <noscript><div id="noscript">(please enable javascript)<span>This is pure happiness!</span></div></noscript>
       <script type="text/javascript">
