--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
   <head>
 
-    <title>Spread the happiness! #happyday</title>
+    <title>Happyvideo - everyday a #happyday</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <meta name="description" content="This is pure happiness! Just listen to these songs and be happy!"/>
+    <meta name="description" content="Happyvideo is pure happiness! Just listen to these songs and be happy! Everyday a #happyday!"/>
     <meta property="og:title" content="Everyday a Happyday"/>
     <meta property="og:type" content="cause"/>
-    <meta property="og:url" content="http://koos.github.io/happyday"/>
-    <meta property="og:image" content="http://koos.github.io/happyday/happy.png"/>
-    <meta property="og:site_name" content="Everyday a Happyday"/>
+    <meta property="og:url" content="http://www.happyvideo.co"/>
+    <meta property="og:image" content="http://www.happyvideo.co/happy.png"/>
+    <meta property="og:site_name" content="Happyvideo - everyday a #happyday"/>
     <!-- <meta property="fb:admins" content="500108777"/> -->
     <meta property="og:locale" content="en_US"/>
     <meta property="og:description" content="This is pure happiness! Just listen to these songs and be happy!"/>
