--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <meta name="description" content="Happyvideo is pure happiness! Just listen to these songs and be happy! Everyday a #happyday!"/>
+    <meta name="description" content="Happyvideo is pure happiness! Just listen to these songs, spread them and be happy! Everyday a #happyday!"/>
     <meta property="og:title" content="Everyday a Happyday"/>
     <meta property="og:type" content="cause"/>
     <meta property="og:url" content="http://www.happyvideo.co"/>
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="Happyvideo - everyday a #happyday"/>
     <!-- <meta property="fb:admins" content="500108777"/> -->
     <meta property="og:locale" content="en_US"/>
-    <meta property="og:description" content="This is pure happiness! Just listen to these songs and be happy!"/>
+    <meta property="og:description" content="Happyvideo is pure happiness! Just listen to these songs, spread them and be happy! Everyday a #happyday!"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
