added happyvideo link

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <a class="addthis_button_linkedin_counter" li:counter="top"></a>
         <a class="addthis_counter"></a>
       </div>
-      Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyday.de">happyday</a>. Scroll to the right →</div>
+      Happyday is a <a href="http://4hourventure.com" rel="nofollow">4 hour venture</a> by <a href="http://twitter.com/koos" rel="nofollow">@koos</a> and <a href="http://twitter.com/yoyostile" rel="nofollow">@yoyostile</a>. <a href="http://happyvideo.co">Happyvideo</a>. Scroll to the right →</div>
       <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
       <noscript><div id="noscript">(please enable javascript)<span>This is pure happiness!</span></div></noscript>
       <script type="text/javascript">
