--- a/index.html
+++ b/index.html
@@ -189,5 +189,16 @@
         addthis_config.pubid = "ra-538b071779a6526e";
       </script>
     </footer>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51533325-1', 'happyvideo.co');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 <!-- </-xhtml> -->
